--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -36,7 +36,7 @@ a:hover {
   font-size: 26px;
 }
 
-.header .button {
+.button {
   background-color: #272727;
   color: #fff;
   border-radius: 20px;
