--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -231,3 +231,17 @@ footer {
 footer p{
   font-weight: 300;
 }
+
+
+/* ===============================*/
+/* Media Queryies                 */
+/* ===============================*/
+
+@media screen and (max-width: 768px){
+  .header {
+    text-align: center;
+  }
+  .pull-right {
+    float: none!important;
+  }
+}
