--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -97,6 +97,12 @@ section {
   box-shadow: 2px 2px 10px 2px rgba(0,0,0,.6);
 }
 
+
+
+/* ===============================*/
+/* CARDS                           */
+/* ===============================*/
+
 .card, .subpage-card{
   height: 300px;
   background: #fff;
@@ -111,18 +117,41 @@ section {
   /*position: relative;*/
 }
 
-
-
 .subpage-card h2 {
   margin-top: 0px;
   font-weight: 600;
 }
+
 
 .card:hover  {
   background-size: 160%;
   box-shadow:  0px 0px 50px 10px rgba(0,0,0,0.8);
   z-index: 2;
 }
+
+.card:hover .card-info {
+  bottom: 0;
+}
+
+.card-info {
+  background-color: rgba(0,0,0, .7);
+  position: absolute;
+  bottom: -60px;
+  left: 0;
+  padding: 15px;
+  width: 100%;
+  height: 60px;
+  transition: all .3s;
+}
+
+.card-info h4{
+  margin: 0px;
+  color: #fff;
+}
+.card-info h4:hover{
+  color: #e06c75;
+}
+
 
 
 /* ===============================*/
